Closed Bug 1681682 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::dom::GamepadPlatformService::GetParentService]

Categories

(Core :: DOM: Device Interfaces, defect)

Firefox 85
Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox83 --- unaffected
firefox84 --- unaffected
firefox85 --- fixed
firefox86 --- fixed

People

(Reporter: aryx, Assigned: cmartin)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Both crashes with macOS (2 different devices).

Crash report: https://crash-stats.mozilla.org/report/index/87789e4e-0708-4400-847e-ab5670201207

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(gGamepadPlatformServiceSingleton) (Impossible for monitor thread to be running with no platform service)

Top 10 frames of crashing thread:

0 XUL mozilla::dom::GamepadPlatformService::GetParentService dom/gamepad/GamepadPlatformService.cpp:106
1 XUL  dom/gamepad/cocoa/CocoaGamepad.cpp:433
2 XUL  dom/gamepad/cocoa/CocoaGamepad.cpp:433
3 IOKit __IOHIDDeviceInputElementValueCallback 
4 CoreFoundation __CFDictionaryApplyFunction_block_invoke 
5 CoreFoundation CFBasicHashApply 
6 CoreFoundation CFDictionaryApplyFunction 
7 IOKit __IOHIDQueueValueAvailableCallback 
8 IOHIDLib IOHIDIUnknown::genericRelease 
9 CoreFoundation __CFMachPortPerform 
Flags: needinfo?(cmartin)

Hi Sebastian,

I will look into this immediately, and hopefully be able to get it resolved before the merge date. If it seems that I won't be able to fix it in time, I will NI a code sheriff for a backout.

Does that sound like an alright plan?

Flags: needinfo?(cmartin) → needinfo?(aryx.bugmail)
Assignee: nobody → cmartin
See Also: → 1681748

You can judge it best when it might be fixed. E.g. early in the beta cycle should be good enough. Bug 1681750 is the more frequent one.

Flags: needinfo?(aryx.bugmail)
Status: NEW → ASSIGNED
See Also: → 1682554

Bug 1657404 added assertions to catch errors in the platform-specific backends
for Gamepad. A bug in CocoaGamepad.cpp:StopGamepadMonitoring() causes one of
the new assertions to fire off.

As the solution to this is not easy, and a fix is required for Beta, the
easiest fix for now is to disable the assertion. In the long run, this needs
to be fixed.

Pushed by cmartin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/25b7e43abcd4 Fix Mac OS X crash in GamepadPlatformService::GetParentService r=haik
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: