Bug 1681682 - Fix Mac OS X crash in GamepadPlatformService::GetParentService r=haik

Bug 1657404 added assertions to catch errors in the platform-specific backends
for Gamepad. A bug in CocoaGamepad.cpp:StopGamepadMonitoring() causes one of
the new assertions to fire off.

As the solution to this is not easy, and a fix is required for Beta, the
easiest fix for now is to disable the assertion. In the long run, this needs
to be fixed.

Differential Revision: https://phabricator.services.mozilla.com/D99818